<resources>
    <string name="app_name">Stetoskop Digital</string>
    <string name="rekam_suara_jantung">rekam suara jantung</string>
    <string name="cek_status_jantung">cek status jantung</string>
    <string name="informasi">Informasi</string>
    <string name="pastikan_anda_memiliki_device_stetoskop_digital">pastikan anda memiliki device stetoskop digital</string>
    <string name="halo">halo</string>
    <string name="home">home</string>
    <string name="favorite">favorite</string>
    <string name="account">account</string>
    <string name="setting">setting</string>
    <string name="kembali">kembali</string>
    <string name="rekam">rekam</string>
    <string name="upload">upload</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="fullname">Fullname</string>
    <string name="confirm_password">confirm Password</string>
    <string name="gender">Gender</string>
    <string name="phone_number">Phone Number</string>
    <string name="ktp">KTP</string>
    <string name="role">Role</string>
    <string name="logo">logo</string>
    <string name="masuk">Masuk</string>
    <string name="masukkan_email">John@example.com</string>
    <string name="icon">icon</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="login">LOGIN</string>
    <string name="belum_punya_akun">Belum Punya Akun?</string>
    <string name="daftar_disini">Daftar Disini</string>
    <string name="daftar">Daftar</string>
    <string name="sudah_punya_akun">Sudah Punya Akun?</string>
    <string name="masuk_disini">Masuk Disini</string>
    <string name="pasien">Pasien</string>
    <string name="dokter">Dokter</string>
    <string name="masukkan_nama_lengkap">John Doe</string>
    <string name="nama">Nama</string>
    <string name="nomor_hp">Nomor HP</string>
    <string name="masukkan_nomor_hp">08xxxxxxx</string>
    <string name="konfirmasi_password">Konfirmasi password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="klik_untuk_masukan_file_jpeg_jpg_png_pdf">klik untuk masukan file (jpeg/jpg/png/pdf)</string>
    <string name="predict">Predict</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="lihat_data">Lihat Data</string>
    <string name="mari_sambungkan_device_ke_bluetooth">Mari Sambungkan Device ke Bluetooth</string>
    <string name="lakukan_rekaman_jantung">Lakukan Rekaman Jantung</string>
    <string name="atur_device">Device belum diatur</string>
    <string name="rekam_jantung">Rekam Jantung</string>
    <string name="atur_device_bluetooth">Atur Device Bluetooth</string>
    <string name="refresh">Refresh</string>
    <string name="done">Done</string>
    <string name="masukkan_nama_file">Masukkan Nama File</string>
    <string name="hasil_data">Hasil Data</string>
    <string name="data_rekaman">Data Rekaman</string>
    <string name="search">Search</string>
    <string name="record_result">Record Result</string>
    <string name="status">Status</string>
    <string name="please_wait">Please Wait</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="alamat">Alamat</string>
    <string name="masukkan_alamat">Masukkan Alamat</string>
    <string name="sip">SIP</string>
    <string name="detail">Detail</string>
    <string name="detail_patient">Detail Patient</string>
    <string name="upload_signal_data">Upload Signal Data</string>
    <string name="choose_file">choose file</string>
    <string-array name="gender_options">
        <item>Laki-Laki</item>
        <item>Perempuan</item>
    </string-array>
</resources>