<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/patient_bottom_navigation"
    app:startDestination="@+id/patient_home">

    <fragment
        android:id="@+id/patient_home"
        android:name="com.tensorflow.android.views.fragments.patients.Home"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/patient_record"
        android:name="com.tensorflow.android.views.fragments.patients.Record"
        android:label="@string/rekam"
        tools:layout="@layout/fragment_record" />

    <fragment
        android:id="@+id/patient_predict"
        android:name="com.tensorflow.android.views.fragments.patients.Predict"
        android:label="@string/predict"
        tools:layout="@layout/fragment_predict" />

</navigation>