<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.doctors.PatientDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/wave_more"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/icon" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/back_arrow"
            android:layout_marginStart="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title"
            app:layout_constraintBottom_toBottomOf="@+id/title"
            android:contentDescription="@string/icon" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/detail_patient"
            android:textColor="@color/white_text"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/profile_photo"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title"
            app:layout_constraintBottom_toBottomOf="@+id/title"
            android:contentDescription="@string/icon" />

        <ImageView
            android:id="@+id/patient_profile_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:contentDescription="@string/icon" />

        <TextView
            android:id="@+id/name"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_medium"
            tools:text="Asep The Dragon"
            android:textColor="@color/white_text"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/patient_profile_photo" />

        <View
            android:id="@+id/spacer"
            android:layout_width="1dp"
            android:layout_height="152dp"
            android:layout_marginStart="20dp"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="@id/patient_profile_photo"
            app:layout_constraintStart_toEndOf="@id/patient_profile_photo"
            app:layout_constraintBottom_toBottomOf="@id/name"/>

        <ImageView
            android:id="@+id/gender_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:src="@drawable/gender"
            app:layout_constraintStart_toEndOf="@id/spacer"
            app:layout_constraintTop_toTopOf="@+id/spacer"
            app:layout_constraintBottom_toTopOf="@id/gender_icon"
            android:contentDescription="@string/icon" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/poppins_regular"
            tools:text="Asep The Dragon"
            android:textColor="@color/white_text"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/gender_icon"
            app:layout_constraintTop_toTopOf="@id/gender_icon"
            app:layout_constraintBottom_toBottomOf="@id/gender_icon"/>

        <ImageView
            android:id="@+id/email_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/email"
            app:layout_constraintStart_toEndOf="@id/spacer"
            app:layout_constraintTop_toBottomOf="@+id/gender_icon"
            app:layout_constraintBottom_toTopOf="@id/address_icon"
            android:contentDescription="@string/icon" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/poppins_regular"
            tools:text="Asep The Dragon"
            android:textColor="@color/white_text"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/email_icon"
            app:layout_constraintTop_toTopOf="@id/email_icon"
            app:layout_constraintBottom_toBottomOf="@id/email_icon"/>

        <ImageView
            android:id="@+id/address_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/address"
            app:layout_constraintStart_toEndOf="@id/spacer"
            app:layout_constraintTop_toBottomOf="@+id/email_icon"
            app:layout_constraintBottom_toBottomOf="@id/spacer"
            android:contentDescription="@string/icon" />

        <TextView
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="14dp"
            android:fontFamily="@font/poppins_regular"
            tools:text="Asep The Dragon"
            android:textColor="@color/white_text"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/address_icon"
            app:layout_constraintTop_toTopOf="@id/address_icon"
            app:layout_constraintBottom_toBottomOf="@id/address_icon"/>

        <TextView
            android:id="@+id/upload_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="75dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/upload_signal_data"
            android:textColor="@color/black_text"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/upload_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="8dp"
            android:layout_marginHorizontal="14dp"
            android:layout_marginVertical="4dp"
            app:strokeWidth="0dp"
            app:cardBackgroundColor="@color/pure_white"
            app:cardCornerRadius="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/upload_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="24dp"
                android:paddingVertical="10dp">

                <TextView
                    android:id="@+id/file_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/orange"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/choose_file" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/pedict"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="6dp"
                    android:background="@drawable/rounded_blue_frame"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:fontFamily="@font/poppins_bold"
                        android:textColor="@color/white_text"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/upload" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/file_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/upload_frame"
            tools:listitem="@layout/file_list_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>